LPS-67383 Align cards correctly

--- a/modules/apps/web-experience/journal/journal-web/src/main/resources/META-INF/resources/css/tree.scss
+++ b/modules/apps/web-experience/journal/journal-web/src/main/resources/META-INF/resources/css/tree.scss
@@ -28,7 +28,7 @@
 	.treeview-node-main {
 		float: none;
 		margin-bottom: 20px;
-		padding-left: 40px;
+		padding-left: 20px;
 		position: relative;
 
 		&:not(.disabled) {
